--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ a {
 }
 
 .bg-2 {
-    background-color: #2e72a1; /* Blue */
-    color: #ffffff;
+    background-color: #00FFFF; /* Blue */
+    color: #000000;
 }
 
 .card {
